        * [BUGFIX]: #2755 Fixed error checking for recurrent expression with LIKE/GLOB operator in it.
        * [BUGFIX]: Switched error message from simple method error to smart method error in QueryExecutor to avoid misleading messages.
        * [BUGFIX]: #2760 Fixed marking "unique" in index dialog when opening existing unique index.
        * [BUGFIX]: #2757 Fixed int64 rounding problem.

[3.0.2]
        * [ADDED]: Full support for the interface translations.
        * [ADDED]: Polish translation.
        * [ADDED]: #219, #2711 Reset autoincrement feature to context menu of table and to structure toolbar in table window.
        * [ADDED]: #2715 Added "rows affected" to the execution result message for INSERT/DELETE/UPDATE queries.
        * [BUGFIX]: Fixed deleting column from table that is the only column covered by an index or an "UPDATE OF" trigger.
        * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
        * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
        * [BUGFIX]: Valid objects in SQL editor are now highlighted and are Ctrl+clickable (the feature was there, but was broken and it didn't work).
        * [BUGFIX]: Fixed invalid 'modified' status when focusing out NumberMultiEditor in FormView, resulting in uncommited change on FormView, even there was no change.
        * [BUGFIX]: #2698 Fixed double precision numbers displaying in the Grid View.
        * [BUGFIX]: #2696 Fixed handling foreign keys when the main table was not renamed, just columns changed.
        * [BUGFIX]: #2713 Fixed foreign key actions in Foreign Key dialog, so they are no longer the same for ON UPDATE and ON DELETE, even they were configured differently.
        * [BUGFIX]: #2715 Fixed storing rows affected/selected in SQL Editor history (bug since version 3.0.0 caused "rows" column in SQL history to be always 0).
        * [BUGFIX]: Main window toolbar is updated after creating/deleting database objects (it was not).